--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="author" content="Untree.co">
-  <link rel="shortcut icon" href="images/LOGO-removebg-preview.png">
+  <link rel="shortcut icon" href="images/logo dunia garasi.png">
 
   <meta name="description" content="" />
   <meta name="keywords" content="bootstrap, bootstrap4" />
@@ -66,14 +66,14 @@
 								<p class="mb-4">DUNIA GARASI Adalah Sebuah Website showroom mobil yang menyediakan semua merek mobil dan jenis jenis mobil yang anda cari. </p>
 								<p class="mb-4">Bisnis ini berdiri saat kami sedang memikirkan bisnis di sebuah garasi yang sangat besar, dan kami berfikir agar memanfatkan garasi tersebut untuk berjualan dealer mobil yang menggunakan fitur website agar mengikuti perkembangan zaman.
 								, dan kami pun melihat peluang di daerah sekitar kami belum banyak showroom mobil yang memiliki berbagai mobil yang berkelas.Sejak saat itu kami terus mencoba dan akhirnya terciptanya website Dunia Garasi</p>
-								<p class="mb-4">Perusahaan ini didirikan pada 17 Agustus 2023. Pendirinya beranggota 5 orang yaitu: Winda Fenita, Iklima, Nia Fatha Alima, Dias Zidane Saputra, Adela Saputri.</p>
+								<p class="mb-4">Perusahaan ini didirikan pada 17 Agustus 2020. Pendirinya beranggota 5 orang yaitu: Winda Fenita, Iklima, Nia Fatha Alima, Dias Zidane Saputra, Adela Saputri.</p>
 
 								<p><a href="shop.html" class="btn btn-secondary me-2">Shop Now</a>
 							</div>
 						</div>
 						<div class="col-lg-7">
 							<div class="hero-img-wrap">
-								<img src="images/logo dunia garasi.png" width="500px" class="img-fluid">
+								<img src="images/LOGO-removebg-preview(1).png" width="500px" class="img-fluid">
 							</div>
 						</div>
 					</div>
